Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -190,10 +190,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price']) < len(alternative['price']):\n",
-    "        return restaurant\n",
-    "    else:\n",
-    "        return alternative"
+    "    "
    ]
   },
   {
@@ -320,13 +317,7 @@
     }
    ],
    "source": [
-    "def open_restaurants(restaurants):\n",
-    "    confirmed_open = []\n",
-    "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed'] == False:\n",
-    "            confirmed_open.append(restaurant)\n",
-    "    return confirmed_open\n",
-    "open_restaurants(restaurants)"
+    "def open_restaurants(restaurants):\n"
    ]
   },
   {
