--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,8 @@
     }
    ],
    "source": [
-    "def open_restaurants(restaurants):\n"
+    "def open_restaurants(restaurants):\n",
+    "    o\n"
    ]
   },
   {
