--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,8 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    comfir\n"
+    "    comfirmed_open = []\n",
+    "    if res\n"
    ]
   },
   {
