Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    comfirmed_open = []\n",
-    "    if res\n"
+    "    for restaurant in restaurants:\n",
+    "        if r\n"
    ]
   },
   {
