Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,8 @@
     "def open_restaurants(restaurants):\n",
     "    comfirmed_open = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed'] =\n"
+    "        if restaurant['is_closed'] == False:\n",
+    "            comfirmed\n"
    ]
   },
   {
