Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,10 +325,10 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    comfirmed_open = []\n",
+    "    confirmed_open = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            comfirmed\n"
+    "            confirmed_open.append\n"
    ]
   },
   {
