Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,8 @@
     "    confirmed_open = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            confirmed_open.append(restaurant)\n"
+    "            confirmed_open.append(restaurant)\n",
+    "    return\n"
    ]
   },
   {
