Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaura))\n"
+    "    return list(filter(lambda restaurant: restaurant['is_close']))\n"
    ]
   },
   {
