--- a/index.ipynb
+++ b/index.ipynb
@@ -284,12 +284,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['is_close']))\n"
+    "    return list(filter(lambda restaurant: restaurant['is_closed'] == False, restaurants))\n"
    ]
   },
   {
