--- a/index.ipynb
+++ b/index.ipynb
@@ -284,12 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return list(map)\n"
+    "    confirmed_open = []\n",
+    "    for restaurant in restaurants:\n",
+    "        if restaurant['is_closed'] == False:\n",
+    "            confirmed_open.append(restaurant)\n",
+    "    return confirmed_open\n"
    ]
   },
   {
